<resources>
    <string name="app_name">android-wanted-SensorDashboardApp</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="save">저장</string>
    <string name="measure">측정</string>
    <string name="list">목록</string>
    <string name="do_measure">측정하기</string>
    <string name="replay">다시보기</string>
    <string name="back">뒤로 가기</string>

    <string name="x">X</string>
    <string name="y">Y</string>
    <string name="z">Z</string>
    <string name="Accelerator">Acc</string>
    <string name="Gyroscope">Gyro</string>
    <string name="measure_stop">정지</string>
    <string name="list_title">목록</string>
    <string name="list_Acc">Accelerometer</string>
    <string name="list_gyro">Gyro</string>
    <string name="play">Play</string>
    <string name="delete">Delete</string>
    <string name="view">View</string>
    <string name="play_show_title">다시보기</string>


</resources>