<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="vm"
            type="com.preonboarding.sensordashboard.presentation.view.sensor_history_play.SensorHistoryPlayViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".presentation.view.sensor_history_play.SensorHistoryPlayFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_main"
            android:layout_width="0dp"
            android:layout_height="?attr/actionBarSize"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/iv_back"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:contentDescription="@string/back"
                android:paddingHorizontal="12dp"
                android:src="@drawable/ic_arrow_back_24"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:navigateUp="@{null}" />

            <TextView
                android:id="@+id/tv_title"
                style="@style/ToolbarTitle"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:gravity="center"
                android:text="@string/replay"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/tv_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cl_main"
            tools:text="2022/09/07 15:10:11" />

        <TextView
            android:id="@+id/tv_sub_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/play"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_date" />

        <TextView
            android:id="@+id/tv_history_measure_x"
            bindValueX="@{vm.currentMeasureValue.x}"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="12dp"
            android:textColor="@color/xRed"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_sub_title"
            tools:text="@string/x" />

        <TextView
            android:id="@+id/tv_history_measure_y"
            bindValueY="@{vm.currentMeasureValue.y}"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:textColor="@color/yGreen"
            android:textSize="14sp"
            app:layout_constraintEnd_toStartOf="@id/tv_history_measure_z"
            app:layout_constraintStart_toEndOf="@id/tv_history_measure_x"
            app:layout_constraintTop_toBottomOf="@id/tv_sub_title"
            tools:text="@string/y" />

        <TextView
            android:id="@+id/tv_history_measure_z"
            bindValueZ="@{vm.currentMeasureValue.z}"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="20dp"
            android:textColor="@color/zBlue"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_sub_title"
            tools:text="@string/z" />

        <com.github.mikephil.charting.charts.LineChart
            android:id="@+id/line_chart"
            android:layout_width="0dp"
            android:layout_height="360dp"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_sub_title" />

        <ImageButton
            android:id="@+id/btn_control"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="?attr/selectableItemBackground"
            android:src="@drawable/ic_play_48"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/line_chart" />

        <TextView
            android:id="@+id/tv_timer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_stop_48"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/btn_control"
            app:layout_constraintStart_toEndOf="@id/btn_control"
            app:layout_constraintTop_toTopOf="@id/btn_control"
            tools:text="0.0" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
